GNOME Bugzilla – Bug 710759
mpegts: fix uninitialized variable warnings
Last modified: 2013-10-25 11:33:26 UTC
Fix uninitialized variables warnings with apple llvm 5.0 on osx >= 10.8.5.
Created attachment 257974 [details] [review] mpegtsdemux: fix uninitialized variable warning
Created attachment 257975 [details] [review] mpegtsmux: fix uninitialized variable warning
Pushed commit e7687dbaa22ad0dd3fa3c1dfc7fff8b76ec3b273 Author: Matthieu Bouron <matthieu.bouron@gmail.com> Date: Wed Oct 23 17:11:20 2013 +0100 mpegtsmux: fix uninitialized variable warning https://bugzilla.gnome.org/show_bug.cgi?id=710759 commit 84fbc08c251de8a53d5503f2dc5acbc2d97d2c19 Author: Matthieu Bouron <matthieu.bouron@gmail.com> Date: Wed Oct 23 16:58:49 2013 +0100 mpegtsdemux: fix uninitialized variable warning https://bugzilla.gnome.org/show_bug.cgi?id=710759